force-app/main/default/objects/Cloudrop__Cloud_Storage__c/Cloudrop__Cloud_Storage__c.object-meta.xml
<CustomObject>
    <label>MassMailer Doc</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MassMailer Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>