force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Access__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Access__c</fullName>
    <description>says private/public type.</description>
    <label>Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
                <default>true</default>
                <label>Private</label>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>