force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Actual_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Actual_Name__c</fullName>
    <description>Actual name of file</description>
    <label>Actual Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>