force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Body__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Body__c</fullName>
    <description>Email content that should be forwareded when sharing file with others</description>
    <label>Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>