force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Common__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Common__c</fullName>
    <description>To keep the Id of root file in order upload new version</description>
    <label>Common</label>
    <length>20</length>
    <type>Text</type>
</CustomField>