force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Description__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Description__c</fullName>
    <description>File Description</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>