force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__DescriptionNew__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__DescriptionNew__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>