force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Doc_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Doc_Sub_Type__c</fullName>
    <label>Doc Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cloudrop__Doc_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sub Document Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>