force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Doc_Type__c</fullName>
    <label>Doc Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>