force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Email_To__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Email_To__c</fullName>
    <description>for storing the to field of the synced email item.</description>
    <label>Email To</label>
    <type>Email</type>
</CustomField>