force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>