force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__External_Path__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__External_Path__c</fullName>
    <description>External Path to rackspace</description>
    <label>File Link</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>