force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__File_Delete_After__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__File_Delete_After__c</fullName>
    <label>File Delete After</label>
    <length>50</length>
    <type>Text</type>
</CustomField>