force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__File_Path__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__File_Path__c</fullName>
    <description>Exact path of the file in RackSpace</description>
    <label>File Path</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>