force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__File_Size__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__File_Size__c</fullName>
    <label>File Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>