force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__File_Uploaded_At__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__File_Uploaded_At__c</fullName>
    <description>This field contains the date and time value at which the record is created.</description>
    <label>File Uploaded At</label>
    <length>50</length>
    <type>Text</type>
</CustomField>