force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Folder__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to parent folder</description>
    <label>Folder</label>
    <referenceTo>Cloudrop__Cloud_Storage__c</referenceTo>
    <relationshipName>Cloud_Storages</relationshipName>
    <type>Lookup</type>
</CustomField>