force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__fortest__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__fortest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>fortest</label>
    <type>Checkbox</type>
</CustomField>