force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__From__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__From__c</fullName>
    <description>for storing email sender id for the synced email in email2drop.</description>
    <label>From</label>
    <length>100</length>
    <type>Text</type>
</CustomField>