force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__IsEmailToDrop__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__IsEmailToDrop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEmailToDrop</label>
    <type>Checkbox</type>
</CustomField>