force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Keyword__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Keyword__c</fullName>
    <label>Keyword</label>
    <length>80</length>
    <type>Text</type>
</CustomField>