force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Object_Detail_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Object_Detail_Id__c</fullName>
    <formula>IF(  ISBLANK( Cloudrop__Relate_To__c ) ,
LEFT( Cloudrop__ObjectId__c  , 3)
,

LEFT( Cloudrop__Relate_To__c   , 3))</formula>
    <label>Object Detail Id</label>
    <type>Text</type>
</CustomField>