force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__ObjectId__c</fullName>
    <label>ObjectId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>