force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Record_Id__c</fullName>
    <description>Id of the record</description>
    <label>Record Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>