force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Relate_To__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Relate_To__c</fullName>
    <description>Related object Id</description>
    <label>Relate To</label>
    <length>80</length>
    <type>Text</type>
</CustomField>