force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Source__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Source__c</fullName>
    <defaultValue>&apos;Manual&apos;</defaultValue>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>