force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Subject__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>