force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Temp_Path__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Temp_Path__c</fullName>
    <label>Temp Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>