force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__ToLead__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__ToLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TO</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Cloud_Drop</relationshipName>
    <type>Lookup</type>
</CustomField>