force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Type__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>