force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Unique__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Unique__c</fullName>
    <label>Unique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>