force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Version__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Version__c</fullName>
    <description>To keep the version of every file</description>
    <inlineHelpText>keeps the version of every file</inlineHelpText>
    <label>Version</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>