force-app/main/default/objects/Cloudrop__Cloud_Storage__c/fields/Cloudrop__Version_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Version_Name__c</fullName>
    <label>Version Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>