force-app/main/default/objects/Cloudrop__Cloud_Storage__c/recordTypes/Cloudrop__Document.recordType-meta.xml
<RecordType>
    <fullName>Cloudrop__Document</fullName>
    <active>true</active>
    <label>Document</label>
</RecordType>