force-app/main/default/objects/Cloudrop__Cloud_Storage__c/recordTypes/Cloudrop__Folder.recordType-meta.xml
<RecordType>
    <fullName>Cloudrop__Folder</fullName>
    <active>true</active>
    <label>Folder</label>
</RecordType>